--- a/Bookish.csproj
+++ b/Bookish.csproj
@@ -5,5 +5,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.10"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.10"/>
+    <PackageReference Include="NUnit" Version="3.13.2"/>
+    <PackageReference Include="FakeItEasy" Version="7.2.0"/>
   </ItemGroup>
 </Project>
